# stove

./: .editorconfig  .gitignore  404.html  CHANGELOG.md  README.md  build.gradle.kts  codecov.yml  detekt.yml  gradle.properties  index.html  jreleaser.yml  lint.sh  mkdocs.yml  pre-commit.sh  renovate.json  requirements-docs.txt  settings.gradle.kts  sitemap.xml
tools/stove-cli/: .gitignore  Cargo.toml  build.rs  clippy.toml  install.sh  justfile  rustfmt.toml
tools/stove-cli/Formula/: stove-next.rb  stove.rb
tools/stove-cli/spa/: biome.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
tools/stove-cli/spa/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
tools/stove-cli/spa/src/api/: client.ts  live-cache.ts  sse.ts  types.ts
tools/stove-cli/spa/src/components/: Badge.tsx  CapturedStateLane.tsx  Detail.tsx  DurationEdge.tsx  EntryDetails.tsx  EntryRow.tsx  ErrorDialog.tsx  FlowDag.tsx  (+19 more)
tools/stove-cli/spa/test/: api-client.test.mjs  flow.test.mjs  json.test.mjs  live-cache.test.mjs  snapshot-state.test.mjs  version-mismatch.test.mjs
tools/stove-cli/src/: config.rs  error.rs  ingest.rs  lib.rs  main.rs  skills.rs
tools/stove-cli/src/grpc/: service.rs
tools/stove-cli/src/http/: mod.rs  server.rs
tools/stove-cli/src/mcp/: analysis.rs  args.rs  contract.rs  mod.rs  protocol.rs  security.rs  tools.rs
tools/stove-cli/src/sse/: manager.rs
tools/stove-cli/src/storage/: database.rs  mod.rs  models.rs  repository.rs
tools/stove-cli/tests/: api_e2e.rs  mcp_e2e.rs
tools/stove-cli/tests/common/: mod.rs
(+2319 files in other folders)
